Add content to reproduce the bug

--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,11 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+ion-content {
+  --padding-bottom: 20px;
+  --padding-top: 20px;
+  --padding-start: 20px;
+  --padding-end: 20px;
+}
