--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,47 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>
+            Blank
+        </ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <ion-header collapse="condense">
+        <ion-toolbar>
+            <ion-title size="large">Blank</ion-title>
+        </ion-toolbar>
+    </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+    <div id="container">
+        <strong>Ready to create an app?</strong>
+        <p>Start with Ionic <a target="_blank" rel="noopener noreferrer"
+                               href="https://ionicframework.com/docs/components">UI
+            Components</a>
+        </p>
+    </div>
+    <ng-container *ngIf="loaded$ | async">
+        <ion-item>1</ion-item>
+        <ion-item>1</ion-item>
+        <ion-item>1</ion-item>
+        <ion-item>1</ion-item>
+        <ion-item>1</ion-item>
+        <ion-item>1</ion-item>
+        <ion-item>1</ion-item>
+    </ng-container>
+    <ion-item>1</ion-item>
+    <ion-item>1</ion-item>
+    <ion-item>1</ion-item>
+    <ion-item>1</ion-item>
+    <ion-item>1</ion-item>
+    <ion-item>1</ion-item>
+    <ion-item>1</ion-item>
+    <ion-item>1</ion-item>
+    <ion-item>1</ion-item>
+    <ion-item>1</ion-item>
+    <ion-item>1</ion-item>
+    <ion-item>1</ion-item>
+    <ion-button (click)="showMessage()">
+        Cancel
+    </ion-button>
 </ion-content>
